syntax = "proto3";
option go_package = "./pb";
package email;

message MailPayload {
    string HTML = 1;
    string subject = 2;
    repeated string receivers = 3;
}
